@@ -1,3 +1,8 @@
+2017-01-17 Albert Chu <chu11@llnl.gov>
+
+	* ipmi-config/: Use inet_ntop() to output IPv4 addresses instead
+	of outputting "by hand".
+
 2017-01-03 Albert Chu <chu11@llnl.gov>
 
 	* common/toolcommon/pstdout.c (pstdout_hostnames_count): Slight
